# standard-contradictions

./: .gitignore  .lazy.lua  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  mdl-pypi.yml  mdl-testpypi.yml  mdl-tests.yml  release-mdl-mcp.yml  release-mdl.yml  release-vsix.yml  vscode-vsix.yml
ddl-ltlf/: .gitignore  README.md
ddl-ltlf-from-text/: main.py  requirements.txt
ddl-ltlf-from-text/data/: test.ddlltlf  test.json
ddl-ltlf-v2/: .gitignore  pyproject.toml
ddl-ltlf-v2-lang/: .gitignore  .lazy.lua  README.md  grammar.js  sample.mdl  tree-sitter.json
ddl-ltlf-v2-lang/lsp/: server.py
ddl-ltlf-v2-lang/queries/mdl/: highlights.scm
ddl-ltlf-v2-lang/scripts/: build-parser.sh  open-demo.sh
ddl-ltlf-v2/examples/: alignment_sample.py  dsl_sample.py  hello_world.py  typed_structures.py
ddl-ltlf-v2/examples/email_verification/: email_specification.mdl.py  main.py
ddl-ltlf-v2/mdl/: README.md  pyproject.toml
ddl-ltlf-v2/mdl/src/mdl/: __init__.py
ddl-ltlf-v2/mdl/src/mdl/lib/: alignment.py  dsl.py  model.py  solver.py
ddl-ltlf-v2/mdl/tests/: test_hello_world.py  test_language_systems.py  test_module_build.py  test_solver.py  test_stdlib_system.py
ddl-ltlf-v2/stdlib/: __init__.py  system.mdl.py
ddl-ltlf/data/: sample.mdl
ddl-ltlf/src/: ddl-ltlf.sln
ddl-ltlf/src/Mprokazin.DdlLtlf.Cli/: Args.fs  Mprokazin.DdlLtlf.Cli.fsproj  Parameters.fs  Program.fs  README.md
ddl-ltlf/src/Mprokazin.DdlLtlf.Language/: Ast.Parser.fs  Ast.Unparser.fs  Ast.Visitors.AlgebraicConditionVisitor.fs  Ast.Visitors.DeonticStatementVisitor.fs  Ast.Visitors.ExpressionVisitor.fs  Ast.Visitors.Helpers.fs  Ast.Visitors.PredicateDefinitionVisitor.fs  Ast.Visitors.TypeDefinitionVisitor.fs  Ast.Visitors.TypeDescriptionVisitor.fs  Ast.Visitors.ValueReferenceVisitor.fs  Ast.Visitors.fs  Ast.fs  Mprokazin.DdlLtlf.Language.fsproj  Mprokazin.DdlLtlf.Language.fsproj.Backup.tmp  README.md  Semantics.fs  TYPING.md  Typing.fs
ddl-ltlf/src/Mprokazin.DdlLtlf.Language.Antlr/: DdlLtlf.g4  Mprokazin.DdlLtlf.Language.Antlr.csproj  README.md
ddl-ltlf/src/Mprokazin.DdlLtlf.Language.Ast.SchemaGen/: Mprokazin.DdlLtlf.Language.Ast.SchemaGen.fsproj  Program.fs  schema-manual.json  schema.json
ddl-ltlf/src/Mprokazin.DdlLtlf.Solver/: Library.fs  (+2 more)
editor-support/tree-sitter-grammar/: Makefile  grammar.js  package.json  tree-sitter.json
editor-support/vscode-extension/: .vscodeignore  Makefile  extension.js  language-configuration.json  package-lock.json  package.json
embeddings-clusters/: .gitignore  requirements.txt
embeddings-clusters/migrations/: 001-initial.sql
embeddings-clusters/src/: get-embeddings.py  get-paths.py  present.ipynb  reduce-dim.py
mdl/: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  flake.nix  pyproject.toml
mdl-bench/contracts-nli/: .env.sample  README.md  pyproject.toml
mdl-bench/contracts-nli/data/: .gitignore
mdl-bench/contracts-nli/prompts/: no_align_v1.system.md  no_align_v1.user.md
mdl-bench/contracts-nli/src/contract_nli_bench/: __init__.py  cases.py  cli.py  constants.py  download.py  evaluation.py  mdl_tools.py  paths.py  prompting.py  runner.py
mdl-bench/contracts-nli/tests/: test_contract_nli_bench.py
mdl-mcp/: Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml
mdl-mcp/src/mdl_mcp/: __init__.py  server.py
mdl-mcp/src/mdl_mcp/resources/: MDL.g4  language-reference.md  quickstart.md
mdl-mcp/tests/: test_server.py
mdl-v3/: DESIGN.md  MANIFEST.in  Makefile  README.md  pyproject.toml
mdl-v3/docs/: ARCHITECTURE.md  GRAMMAR.md
mdl-v3/examples/: alignment.mdl  complex.mdl  email.mdl  fib.mdl  lineq_rat.mdl  pipe.mdl  pwr.mdl  tube.mdl
mdl-v3/grammars/tree-sitter-mdl/: grammar.js  package.json
mdl-v3/grammars/vscode/: README.md  extension.js  package.json
mdl-v3/src/mdl/: __init__.py  aligner.py  ast.py  builder.py  cli.py  core.py  lexer.py  linter.py  lsp.py  parser.py  printer.py  runtime.py  solver.py
mdl-v3/src/mdl/stdlib/std/collections/: set.mdl
mdl-v3/src/mdl_ddl_ltlf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mdl-v3/tests/: test_aligner.py  test_builder.py  test_linter.py  test_lsp.py  test_parser.py  test_solver.py  test_solver_fixture_suite.py
mdl-v3/tests/fixtures/solver_suite/: pipeline_spec.mdl  pipeline_tube_alignment.mdl  policy_exceptions.mdl  tube_model.mdl
mdl/docs/: ARCHITECTURE.md  DESIGN.md  GRAMMAR.md  LANGUAGE_REFERENCE.md  QUICKSTART.md  QUICKSTART_RU.md
mdl/examples/: alignment.mdl  canned_meat.mdl  email.mdl  fib.mdl  hello_world.mdl  lineq.mdl  lineq_rat.mdl  pi_leibniz.mdl  pipe.mdl.py  tmp.mdl
mdl/examples/canned_meat/: alignment.mdl  canned_meat_dstu.mdl  canned_meat_gost.mdl  fact.mdl
mdl/grammars/vscode/: .vscodeignore  README.md  package.json
mdl/src/mdl/: __init__.py  aligner.py  antlr_bridge.py  ast.py  ast_builder.py  builder.py  cli.py  core.py  diagnostics.py  dsl.py  lexer.py  linter.py  loader.py  lsp.py  lsp_model.py  names.py  parser.py  printer.py  runtime.py  solver.py  type_inference.py
mdl/src/mdl/_antlr/: MDL.interp  MDL.tokens  MDLLexer.interp  MDLLexer.py  MDLLexer.tokens  MDLParser.py  MDLVisitor.py  __init__.py
mdl/src/mdl/grammar/: MDL.g4
mdl/src/mdl/grammar/.antlr/: MDL.interp  MDL.tokens  MDLBaseListener.java  MDLLexer.interp  MDLLexer.java  MDLLexer.tokens  MDLListener.java  MDLParser.java
mdl/src/mdl/stdlib/std/: collections.mdl  result.mdl  strings.mdl
mdl/src/mdl/stdlib/std/collections/: list.mdl  map.mdl  option.mdl  set.mdl
mdl/src/mdl/stdlib/std/system/: strings.mdl
mdl/src/mdl_ddl_ltlf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mdl/tests/: conftest.py  sample_sources.py  test_aligner.py  test_builder.py  test_dsl.py  test_linter.py  test_loader.py  test_lsp.py  test_parser.py  test_runtime.py  test_solver.py  test_solver_fixture_suite.py  test_std.py  test_translate.py
mdl/tests/fixtures/solver_suite/: pipeline_spec.mdl  pipeline_tube_alignment.json  pipeline_tube_alignment.mdl  policy_exceptions.mdl  tube_model.mdl
semantic-segmenter/src/: main.py  requirements.txt  semantic_segmenter.py
(+48 files in other folders)
