[project]
name = "standard-contradictions"
version = "0.0.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "contract-nli-bench",
  "mprokazin-mdl",
  "mprokazin-mdl-mcp",
]

[dependency-groups]
dev = [
  "mprokazin-mdl[dev]",
  "mprokazin-mdl-mcp[dev]",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "mdl",
  "mdl-mcp",
  "mdl-bench/contracts-nli",
]

[tool.uv.sources]
contract-nli-bench = { workspace = true }
mprokazin-mdl = { workspace = true }
mprokazin-mdl-mcp = { workspace = true }

[tool.ruff]
extend-exclude = ["mdl/examples", "**/*.mdl.py"]

[tool.basedpyright]
typeCheckingMode = "basic"
include = [
  "mdl/src",
  "mdl/tests",
  "mdl-mcp/src",
  "mdl-mcp/tests",
]
exclude = ["mdl/src/mdl/_antlr", "mdl/examples", "**/*.mdl.py"]
