[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mprokazin-mdl-mcp"
version = "0.1.1"
description = "Model Context Protocol server for verifying LLM-generated MDL models."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{name = "MDL contributors"}]
license = {text = "MIT"}
keywords = ["MCP", "Model Context Protocol", "MDL", "LLM", "verification"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "mprokazin-mdl==0.1.1",
  "mcp>=1.26,<2",
]

[project.optional-dependencies]
solver = [
  "mprokazin-mdl[solver]==0.1.1",
]
dev = [
  "pytest>=8",
  "mprokazin-mdl[solver]==0.1.1",
]

[project.scripts]
mdl-mcp = "mdl_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mdl_mcp = [
  "resources/MDL.g4",
  "resources/language-reference.md",
  "resources/quickstart.md",
]

[tool.uv.sources]
mprokazin-mdl = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
