[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mprokazin-mdl"
version = "0.1.0"
description = "MDL / DDL-LTLf modelling language toolkit: translator, runtime, linter, LSP and aligner."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{name = "MDL contributors"}]
license = {text = "MIT"}
keywords = ["DDL-LTLf", "deontic logic", "LTLf", "normative documents", "language"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
]
dependencies = []

[project.optional-dependencies]
solver = [
  "z3-solver>=4.13",
]
align = [
  "pandas>=3.0.2",
  "valentine>=0.5.0",
  "bdi-kit>=0.10.0",
]
full = [
  "z3-solver>=4.13",
  "pandas>=3.0.2",
  "valentine>=0.5.0",
  "bdi-kit>=0.10.0",
]
dev = [
  "pytest>=8",
  "z3-solver>=4.13",
  "pandas>=3.0.2",
  "valentine>=0.5.0",
  "bdi-kit>=0.10.0",
]

[project.scripts]
mdl = "mdl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mdl = ["stdlib/**/*.mdl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
