[build-system]
requires = ["uv_build>=0.10,<0.12"]
build-backend = "uv_build"

[project]
name = "mprokazin-mdl"
version = "0.0.0"
description = "MDL / DDL-LTLf modelling language toolkit: translator, runtime, linter, LSP and aligner."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{name = "MDL contributors"}]
license = {text = "MIT"}
keywords = ["DDL-LTLf", "deontic logic", "LTLf", "normative documents", "language"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
]
dependencies = [
  "antlr4-python3-runtime==4.13.2",
]

[project.optional-dependencies]
solver = [
  "z3-solver>=4.13",
]
align = [
  "pandas>=3.0.2",
  "bdi-kit>=0.10.0",
]
full = [
  "z3-solver>=4.13",
  "pandas>=3.0.2",
  "bdi-kit>=0.10.0",
]
dev = [
  "pytest>=8",
  "z3-solver>=4.13",
  "pandas>=3.0.2",
  "bdi-kit>=0.10.0",
]

[project.scripts]
mdl = "mdl.cli:main"

[tool.uv.build-backend]
module-name = "mdl"
source-exclude = ["src/mdl/grammar/.antlr", "src/mdl/grammar/.antlr/**"]
wheel-exclude = ["src/mdl/grammar/.antlr", "src/mdl/grammar/.antlr/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
extend-exclude = ["src/mdl/_antlr", "examples", "**/*.mdl.py"]

[tool.basedpyright]
exclude = ["src/mdl/_antlr"]
