[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdl"
version = "0.1.0"
description = "Modeling language package for ddl-ltlf-v2."
readme = "README.md"
requires-python = ">=3.15"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
